added windows targets in build.xml