@@ -32,6 +32,25 @@
             <jvmarg line="-Dfile.encoding=UTF-8"/>
         </java>
     </target>
+
+    <target name="windows_compile" depends="clean">
+        <mkdir dir="build"/>
+        <javac srcdir="src" destdir="build" modulepath="lib/lib" >
+        	<compilerarg line="--add-modules javafx.base,javafx.graphics,javafx.controls,javafx.media"/>
+        </javac>
+        <copy file="src/com.tekronet/ui/main.css" todir="build/com/tekronet/ui"/>
+        <copy file="src/com.tekronet/ui/res/Lato-Regular.ttf" todir="build/com/tekronet/ui/res"/>
+        <copy file="src/com.tekronet/ui/res/logo.png" todir="build/com/tekronet/ui/res"/>
+    </target>
+
+    <target name="windows_run" depends="jar">
+    <java jar="jar/Trumpet.jar" fork="true" modulepath="lib/lib" >
+        	<jvmarg line="--add-modules javafx.controls,javafx.graphics,javafx.media"/>
+            <jvmarg line="-Dfile.encoding=UTF-8"/>
+        </java>
+    </target>
+
+
     
     <target name="frun">
         <java jar="jar/Trumpet.jar" fork="true" modulepath="./lib" >
